update the file

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,12 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 @import '@fortawesome/fontawesome-free/css/all.min.css';
+@import '../css/dashboard.css';
+
+@import "datatables.net-bs5/css/dataTables.bootstrap5.min.css";
+
+//// DataTables
+//@import 'bootstrap-icons/font/bootstrap-icons.css';
+//@import "datatables.net-bs5/css/dataTables.bootstrap5.min.css";
+//@import "datatables.net-buttons-bs5/css/buttons.bootstrap5.min.css";
+//@import 'datatables.net-select-bs5/css/select.bootstrap5.css';
